force-app/main/default/objects/Booking__c/fields/Verification_Link_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Verification_Link_Sent_Date__c</fullName>
    <label>Verification Link Sent Date</label>
    <type>DateTime</type>
</CustomField>