force-app/main/default/objects/Booking__c/fields/Welcome_Call_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Call_Remarks__c</fullName>
    <label>Welcome Call Remarks</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>