force-app/main/default/objects/Booking__c/fields/Welcome_Email_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Email_Sent_Date__c</fullName>
    <label>Welcome Email Sent Date</label>
    <type>Date</type>
</CustomField>