force-app/main/default/objects/Booking__c/fields/Welcome_Mail_Sent_DT__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Mail_Sent_DT__c</fullName>
    <label>Welcome Mail Sent Date</label>
    <type>DateTime</type>
</CustomField>