force-app/main/default/objects/Booking__c/fields/Welcome_Receipt_Sent__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Receipt_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Welcome Receipt Sent</label>
    <type>Checkbox</type>
</CustomField>